crates/isograph_lang_parser/fixtures/field-no-type-name.input.js
export const BasicField = iso(`
  field .Name {
  }
`)();
